# euro-rack-synth

./: .gitignore  LICENSE.md  README.md  references.md
active-mixers/1-distored-daisy/kiCad/: active_mixer.csv  active_mixer.kicad_sch
bus-board/: README.md
envelope-generator/1-scribble/kiCad/: envelope_generator.csv  envelope_generator.kicad_pcb  envelope_generator.kicad_sch
helpers/bus-board/KiCad/: bus-board.kicad_sch
helpers/cable-tester/gerber/: cable-tester-B_Cu.gbl  cable-tester-B_Mask.gbs  cable-tester-B_Paste.gbp  cable-tester-B_Silkscreen.gbo  cable-tester-Edge_Cuts.gm1  cable-tester-F_Cu.gtl  cable-tester-F_Mask.gts  (+6 more)
helpers/euro-mate/: README.md  ibom.html
helpers/fusion-scripts/: README.md
helpers/iboms/: braids-tht-ibom.html
helpers/proto-boards/: README.md
helpers/scripts/: README.md  package.json  tsconfig.json
helpers/stm32G474_dev-board/: STM32G474_dev.kicad_pcb
helpers/stm32_templates/: ibom.html  stm32_template.kicad_pcb  stm32_template.kicad_sch
modules/effects/reverb/firmware/dsp-reverb/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Makefile  README.md  STM32G474RBTX_RAM.ld  arm-none-eabi-toolchain.cmake  dsp-reverb.ioc  stm32g474rbtx_flash.ld
modules/effects/reverb/firmware/dsp-reverb/Core/Inc/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
modules/effects/reverb/firmware/dsp-reverb/Core/Inc/app/: adc.h  cs4270.h  led_driver.h  reverb.h
modules/effects/reverb/firmware/dsp-reverb/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
modules/effects/reverb/firmware/dsp-reverb/Core/Src/app/: adc.c  cs4270.c  led_driver.c  reverb.c
software/: README.md
software/midi-2-cv/: .cproject  .gitignore  .mxproject  CMakeLists.txt  midi-2-cv Debug.launch  midi-2-cv.ioc
software/stm32F103C8T6_tuner/: .cproject  .project  CMakeLists.txt  stm32F103C8T6_tuner.ioc  stm32F103C8T6_tuner.launch
software/stm32F401CC6_dsp/: .cproject  .mxproject  .project  CMakeLists.txt  stm32F401CC6_dsp Debug.launch  stm32F401CC6_dsp.ioc
(+1138 files in other folders)
